# SlicerDMRI

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CTestConfig.cmake  DWIToDTIEstimation_8cxx_source.html  DiffusionTensorScalarMeasurements_8cxx_source.html  DiffusionWeightedVolumeMasking_8cxx_source.html  FiberTractMeasurements_8cxx_source.html  LICENSE.md  README.md  SuperBuild.cmake  TractographyLabelMapSeeding_8cxx_source.html  annotated.html  classDICOM2FullBrainTractographyLib_1_1full__tractography__workflow_1_1Slicelet-members.html  classDICOM2FullBrainTractographyLib_1_1full__tractography__workflow_1_1Slicelet.html  classDICOM2FullBrainTractographyLib_1_1full__tractography__workflow_1_1Slicelet__coll__graph.map  classDICOM2FullBrainTractographyLib_1_1full__tractography__workflow_1_1Slicelet__coll__graph.md5  classDICOM2FullBrainTractographyLib_1_1full__tractography__workflow_1_1Slicelet__inherit__graph.map  classDICOM2FullBrainTractographyLib_1_1full__tractography__workflow_1_1Slicelet__inherit__graph.md5  classDICOM2FullBrainTractographyLib_1_1full__tractography__workflow_1_1WorkflowConfiguration-members.html  classDICOM2FullBrainTractographyLib_1_1full__tractography__workflow_1_1WorkflowConfiguration.html  classDICOM2FullBrainTractographyLib_1_1full__tractography__workflow_1_1WorkflowConfiguration__coll__graph.md5  classDICOM2FullBrainTractographyLib_1_1full__tractography__workflow_1_1WorkflowConfiguration__inherit__graph.map  classDICOM2FullBrainTractographyLib_1_1full__tractography__workflow_1_1WorkflowConfiguration__inherit__graph.md5  classDICOM2FullBrainTractographyLib_1_1full__tractography__workflow_1_1full__tractography__workflow__slicelet-members.html  classDICOM2FullBrainTractographyLib_1_1full__tractography__workflow_1_1full__tractography__workflow__slicelet.html  classDICOM2FullBrainTractographyLib_1_1full__tractography__workflow_1_1full__tractography__workflow__slicelet__coll__graph.map  classDICOM2FullBrainTractographyLib_1_1full__tractography__workflow_1_1full__tractography__workflow__slicelet__coll__graph.md5  classDICOM2FullBrainTractographyLib_1_1full__tractography__workflow_1_1full__tractography__workflow__slicelet__inherit__graph.map  classDICOM2FullBrainTractographyLib_1_1full__tractography__workflow_1_1full__tractography__workflow__slicelet__inherit__graph.md5  classDICOM2FullBrainTractographyLib_1_1workflow__support_1_1GeneralizedStep-members.html  classDICOM2FullBrainTractographyLib_1_1workflow__support_1_1GeneralizedStep.html  classDICOM2FullBrainTractographyLib_1_1workflow__support_1_1GeneralizedStep__coll__graph.md5  classDICOM2FullBrainTractographyLib_1_1workflow__support_1_1GeneralizedStep__inherit__graph.map  classDICOM2FullBrainTractographyLib_1_1workflow__support_1_1GeneralizedStep__inherit__graph.md5  classDICOM2FullBrainTractographyLib_1_1workflow__support_1_1Workflow-members.html  classDICOM2FullBrainTractographyLib_1_1workflow__support_1_1Workflow.html  classDICOM2FullBrainTractographyLib_1_1workflow__support_1_1Workflow__coll__graph.map  classDICOM2FullBrainTractographyLib_1_1workflow__support_1_1Workflow__coll__graph.md5  classDICOM2FullBrainTractographyLib_1_1workflow__support_1_1Workflow__inherit__graph.map  (+892 more)
Experiments/: ReaderProcesses.py  SlicerTrako.py  (+3 more)
Libs/vtkDMRI/: CMakeLists.txt  vtkBSplineInterpolateImageFunction.cxx  vtkBSplineInterpolateImageFunction.h  vtkDMRIConfig.cmake.in  vtkDMRIConfigure.h.in  vtkHyperPointandArray.h  vtkHyperStreamlineDTMRI.cxx  vtkHyperStreamlineDTMRI.h  vtkHyperStreamlineTeem.cxx  vtkHyperStreamlineTeem.h  vtkImageGetTensorComponents.cxx  vtkImageGetTensorComponents.h  vtkImageSetTensorComponents.cxx  vtkImageSetTensorComponents.h  vtkPolyDataColorLinesByOrientation.cxx  vtkPolyDataColorLinesByOrientation.h  vtkPolyDataTensorToColor.cxx  vtkPolyDataTensorToColor.h  vtkPreciseHyperArray.h  vtkPreciseHyperPoint.h  vtkPreciseHyperStreamline.cxx  vtkPreciseHyperStreamline.h  vtkPreciseHyperStreamlinePoints.cxx  vtkPreciseHyperStreamlinePoints.h  vtkSeedTracts.cxx  vtkSeedTracts.h  vtkTeemEstimateDiffusionTensor.cxx  vtkTeemEstimateDiffusionTensor.h  vtkTensorImplicitFunctionToFunctionSet.cxx  vtkTensorImplicitFunctionToFunctionSet.h  vtkTensorMask.cxx  vtkTensorMask.h  vtkTensorRotate.cxx  vtkTensorRotate.h  vtkTractographyPointAndArray.cxx  vtkTractographyPointAndArray.h
Modules/CLI/DWIToDTIEstimation/Testing/: CMakeLists.txt
Modules/CLI/DiffusionTensorScalarMeasurements/Testing/: CMakeLists.txt
Modules/CLI/DiffusionWeightedVolumeMasking/: CMakeLists.txt  DiffusionWeightedVolumeMasking.cxx  DiffusionWeightedVolumeMasking.xml
Modules/CLI/DiffusionWeightedVolumeMasking/Testing/: CMakeLists.txt
Modules/CLI/ExtractDWIShells/: CMakeLists.txt  ExtractDWIShells.py  ExtractDWIShells.xml
Modules/CLI/FiberTractMeasurements/: CMakeLists.txt  FiberTractMeasurements.cxx  FiberTractMeasurements.xml
Modules/CLI/FiberTractMeasurements/Data/Baseline/: baseline_measurements_folder.txt  baseline_measurements_folder_scalaronly.txt  baseline_measurements_hierarchy.txt  baseline_measurements_hierarchy_all.txt
Modules/CLI/FiberTractMeasurements/Data/Input/: fiber_vtk.vtk  fiber_vtp.vtp  fibers_hierarchy.mrml
Modules/CLI/FiberTractMeasurements/Data/ScalarOnlyInput/: fiber_notensor_randscalar.vtk
Modules/CLI/FiberTractMeasurements/Testing/: CMakeLists.txt  CompareTxts.cxx  FiberTractMeasurementsTest.cxx  cluster_00750.vtp
Modules/CLI/TractographyLabelMapSeeding/: CMakeLists.txt  TractographyLabelMapSeeding.cxx  TractographyLabelMapSeeding.xml
Modules/CLI/TractographyLabelMapSeeding/Testing/: CMakeLists.txt
Modules/Loadable/TractIO/: CMakeLists.txt  DICOMTractographyPlugin.py
Modules/Loadable/TractIO/TractIOCLI/: CMakeLists.txt  DICOMTract_to_VTK.cxx  DICOMTract_to_VTK.xml  VTK_to_DICOMTract.cxx  VTK_to_DICOMTract.xml
Modules/Scripted/RegisterDMRIModuleTemplates/: CMakeLists.txt  RegisterDMRIModuleTemplates.py
Modules/Scripted/TractographyDownsample/: CMakeLists.txt  TractographyDownsample.py
Modules/Scripted/Tractography_ROI_cutting/: CMakeLists.txt  Tractography_ROI_cutting.py
(+244 files in other folders)
